# wagtail-docker-starter

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack-stats.json  webpack.config.js
certs/: certificate.crt  private_key.key
docker/django/: Dockerfile  docker-entrypoint.sh
docker/node/: Dockerfile
docker/postgres/: .env.example
mysite/settings/: base.py  dev.py
mysite/templates/: base.html
