[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "wagtail (>=7.4.2,<8.0.0)",
    "libsass (>=0.23.0,<0.24.0)",
    "django-compressor (>=4.6.0,<5.0.0)",
    "django-sass-processor (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
